# car_hacking

./: .gitignore  LICENSE  README.md  send_gear.py
bmw_gear_selector/: README.md  bmw_gear_can.py  bmw_gws.py  bmw_gws_checksum_search.txt  bmw_gws_uds.py  bmw_gws_ui.py
bmw_gear_selector/can_trigger/: Cargo.toml
bmw_gear_selector/can_trigger/src/: main.rs  monotimer.rs
cpu_fuzz/: Cargo.toml  Embed.toml
cpu_fuzz/.cargo/: config.toml
cpu_fuzz/src/: can.rs  main.rs  monotimer.rs
gear_ratios/: gear_ratios.py
hyundai_kona_ev/: kona.py  kona_bcan.py  kona_service_ids.txt  shift_select_switch.py
hyundai_kona_ev/bench_kona/: README.md  bcan.py  bench_kona.py  ieb.py  igpm.py  message.py  other.py  requirements.txt  srscm.py
hyundai_kona_ev/checksums/: 109_csum.py  10c_csum.py  220_csum.py  354_csum.py  394_csum.py  samples_msg394.csv  temp_msg220.csv
mitsubishi_outlander_phev/: README.md  cmu_renumber.py  outlander_cmu.py  outlander_cmu_ui.py  outlander_dtc.py
outlander_cmu/: outlander_cmu.py  outlander_cmu_ui.py
peugeot_auto_dash/: README.md  send_gear.py
scripts/: bridge_logger.py  iso_session.py  kwp2000.py  log2gvret.py  pycan_csv_to_gvret.py
