[package]
name = "can_trigger"
version = "0.1.0"
edition = "2021"

[dependencies]
bxcan = "0.6.2"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
heapless = "0.7.10"
nb = "1.0.0"
panic-itm = "0.4.2"
stm32f3xx-hal = { version = "0.9.0", features = ["can", "stm32f303xc", "rt"] }
no-std-compat = "0.4.1"

[dev-dependencies]
defmt-test = "0.3.0"

[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
debug = 1 # default is `false`; using `true` is also OK as symbols reside on the host, not the target
